--- a/docs/pages/components/Balance.mdx
+++ b/docs/pages/components/Balance.mdx
@@ -21,7 +21,7 @@ import { Balance } from "@scaffold-ui/components";
 | Prop             | Type            | Default                      | Description                                            |
 | ---------------- | --------------- | ---------------------------- | ------------------------------------------------------ |
 | `address`        | `Address`       | -                            | **Required.** The Ethereum address to show balance for |
-| `chain`          | `Chain`         | Connected chain or `mainnet` | Blockchain network to query                            |
+| `chain`          | `Chain`         | First chain from [WagmiProvider](https://wagmi.sh/react/api/WagmiProvider) config or `mainnet` | Blockchain network to query                            |
 | `defaultUsdMode` | `boolean`       | `false`                      | Start in USD display mode                              |
 | `style`          | `CSSProperties` | -                            | Custom CSS styles (memoize to prevent re-renders)      |
 
