add contract component exmaple

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -23,3 +23,7 @@ Our components are built on top of these React hooks, which you can use directly
 - **[useEtherInput](/hooks/useEtherInput)** - Convert between ETH and USD for input values
 
 **[View Installation Guide →](/hooks#installation)**
+
+## Debug Contracts
+
+**[Debug Contracts](/debug-contracts)** - A contract UI component for debugging deployed contracts.
