--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -26,4 +26,4 @@ Our components are built on top of these React hooks, which you can use directly
 
 ## Debug Contracts
 
-**[Debug Contracts](/debug-contracts)** - A contract UI component for debugging deployed contracts.
+**[Debug Contracts](/debug-contracts/Contract)** - A contract UI component for debugging deployed contracts.
